# tp_computer_vision_ii

./: .gitignore  README.md  main.py  pyproject.toml
src/: data_analysis.ipynb  download_data.py
