[project]
name = "tp-computer-vision-ii"
version = "0.1.0"
description = "Detección de grietas en superficies de infraestructura civil (TP Visión por Computadora II - CEIA)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "kagglehub>=1.0.2",
    "matplotlib>=3.11.1",
    "numpy>=2.5.1",
    "opencv-python>=5.0.0.93",
    "pandas>=3.0.3",
    "pillow>=12.3.0",
    "pyyaml>=6.0.3",
    "roboflow>=1.3.10",
    "seaborn>=0.13.2",
    "ultralytics>=8.4.102",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "nbclient>=0.11.0",
    "nbformat>=5.10.4",
]
